# pytaggr

./: README  README.md  pyproject.toml  showt
libtaggr/: __init__.py  cfg.py  helpers.py  optsparser.py  pytaggr.py  speaker.py  tageditor.py  taggr.py
showt/: showt
