[tool.poetry]
name = "pytaggr"
version = "0.2.1"
description = "used from the CLI or as a back-end to edit audio file names and metadata (tags)"
authors = ["Robert Allred <balinbob@gmail.com>"]
license = "GPL-3.0-or-later"
include  = ["pytaggr"]

packages = [
    { include = "libtaggr" },
    { include = "bin" }
]


[tool.poetry.dependencies]
python = "^3.6"
mutagen = "^1.38"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
pytaggr = "libtaggr:main"
